fixed minor errors in profile settings

--- a/src/app/about-us/about-us-introduction/about-us-introduction.component.html
+++ b/src/app/about-us/about-us-introduction/about-us-introduction.component.html
@@ -1,9 +1,9 @@
 <section class="w-full rounded-md cursor-pointer mt-20 mx-auto">
     <div class="grid lg:grid-cols-2 mx-auto">
-        <p class="w-full text-center text-4xl font-sans font-bold text-red-600 text-transform: uppercase sm:mb-3">
+        <p class="w-full text-center text-xl md:text-4xl font-sans font-bold text-red-600 uppercase sm:mb-3">
             Welcome to Berliz
         </p>
-        <P class="w-full text-center font-sans text-md font-bold lg:text-md text-transform: uppercase ">
+        <P class="w-full text-center font-sans text-sm md:text-md font-bold lg:text-md capitalize ">
             ....... Unlock Your Potentials
         </P>
         <div class="order-1 flex justify-center items-center mt-2 lg:mt-0">
@@ -30,7 +30,7 @@
                 community that set us apart in the industry. Together, we can achieve your health and fitness
                 aspirations like never before.
             </p>
-            <button class="text-sm font-sans bg-red-600 text-white py-2 mb-5 px-5 hover:bg-red-700 rounded-md mx-auto
+            <button class="text-sm font-sans bg-red-600 text-white py-1 mb-5 px-2 hover:bg-red-700 rounded-md mx-auto
                 transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl">
                 Join Now
             </button>
