--- a/src/app/centers/center-page/center-page.component.html
+++ b/src/app/centers/center-page/center-page.component.html
@@ -1,7 +1,7 @@
 <app-navigation-bar></app-navigation-bar>
 <app-center-hero></app-center-hero>
+<app-center-search (allCenters)="handleSearchResults($event)" [centers]="centers"></app-center-search>
 <app-center-header></app-center-header>
-<app-center-search (allCenters)="handleSearchResults($event)"></app-center-search>
 <app-center-search-result [centersResult]="centers" [totalCenters]="countResult"></app-center-search-result>
 <app-center-partner-form></app-center-partner-form>
 <app-footer></app-footer>
