--- a/src/app/dashboard/user/profile-page/profile-page.component.html
+++ b/src/app/dashboard/user/profile-page/profile-page.component.html
@@ -1,6 +1,6 @@
 <div class="relative min-h-screen flex">
     <app-sidebar-navigation></app-sidebar-navigation>
-    <div class="flex p-10 full-width">
+    <div class="flex p-4 md:p-8 mt-4 full-width">
         <div class="width bg-gray-200 p-4 rounded-lg mt-20">
             <app-profile [user]="user"></app-profile>
         </div>
