--- a/src/app/navbar/sidebar-navigation/sidebar-navigation.component.html
+++ b/src/app/navbar/sidebar-navigation/sidebar-navigation.component.html
@@ -22,7 +22,7 @@
                     <feather-icon name="home" class="text-ld font-bold text-gray-600"></feather-icon>
                 </div>
             </div>
-            <app-profile></app-profile>
+            <app-profile [search]="isSearch"></app-profile>
         </div>
     </div>
     <div class="bg-gray-950 text-gray-200 w-64 fixed inset-y-0 left-0 transform duration-300
