--- a/src/app/about-us/about-us-mission/about-us-mission.component.html
+++ b/src/app/about-us/about-us-mission/about-us-mission.component.html
@@ -1,12 +1,12 @@
 <section class="w-full rounded-md cursor-pointer mt-20 mx-auto">
     <div class="grid lg:grid-cols-2 mx-auto">
-        <p class="font-sans w-full text-center text-4xl font-bold text-red-600 text-transform: uppercase sm:mb-3">
+        <p class="font-sans w-full text-center text-xl md:text-4xl font-bold text-red-600 uppercase sm:mb-3">
             Our Mission
         </p>
-        <P class="font-sans w-full text-center text-md font-bold lg:text-md text-transform: uppercase ">
-            .......
+        <P class="font-sans w-full text-center text-sm md:text-md font-bold lg:text-md capitalize">
+            ....... Shaping the fitness industry
         </P>
-        <div class="order-1 flex justify-center items-center mt-2 lg:mt-0">
+        <div class="order-1 flex justify-center items-center mt-2 lg:mt-0 p-2">
             <img class="w-[400px] h-[400px] object-cover m-2 lg:w-[500px] lg:h-[450px] rounded-md mb-4 lg:mb-0
             transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl"
                 src="../../../assets/landing/about-vision.jpg">
@@ -34,7 +34,7 @@
                 our commitment to delivering an exceptional user experience. Join us at Berliz and unlock your fitness
                 potential as we reimagine your fitness journey together.
             </p>
-            <button class="text-sm bg-red-600 text-white py-2 mb-5 px-5 hover:bg-red-700 rounded-md font-sans mx-auto
+            <button class="text-sm bg-red-600 text-white py-1 mb-5 px-2 hover:bg-red-700 rounded-md font-sans mx-auto
                 transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl">
                 Join Now
             </button>
