--- a/src/app/about-us/about-us-vision/about-us-vision.component.html
+++ b/src/app/about-us/about-us-vision/about-us-vision.component.html
@@ -1,10 +1,10 @@
 <section class="w-full rounded-md cursor-pointer mt-20 mx-auto">
     <div class="grid lg:grid-cols-2 mx-auto">
-        <p class="w-full text-center text-4xl font-sans font-bold text-red-600 text-transform: uppercase sm:mb-3">
+        <p class="w-full text-center text-xl md:text-4xl font-sans font-bold text-red-600 uppercase sm:mb-3">
             Our Vision
         </p>
-        <P class="w-full text-center text-md font-sans font-bold lg:text-md text-transform: uppercase ">
-            .......
+        <P class="w-full text-center text-sm md:text-md font-sans font-bold lg:text-md capitalize">
+            ....... Revolutionalizing your fitness journey
         </P>
         <div class="ml-5 order-2 lg:order-1 grid grid-cols-1 text-justify items-center bg-gray-100 m-8 rounded-md mx-auto mr-5">
             <p class="text-sm w-100 font-sans mx-5 mb-5 lg:mb-0">
@@ -24,12 +24,12 @@
                 supportive community that would transform your life. Together, let's achieve your health and fitness aspirations
                 like never before.
             </p>
-            <button class="text-sm bg-red-600 text-white py-2 mb-5 px-5 mt-3 hover:bg-red-700 rounded-md font-sans mx-auto
+            <button class="text-sm bg-red-600 text-white py-1 mb-5 px-2 mt-3 hover:bg-red-700 rounded-md font-sans mx-auto
                 transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl">
                 Join Now
             </button>
         </div>
-        <div class="order-1 flex justify-center items-center mt-2 lg:mt-0">
+        <div class="order-1 flex justify-center items-center mt-2 lg:mt-0 p-2">
             <img class="w-[400px] h-[400px] object-cover m-2 lg:w-[500px] lg:h-[450px] rounded-md mb-4 lg:mb-0
             transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl"
                 src="../../../assets/landing/about-mission.jpg">
