--- a/src/app/about-us/categories/categories.component.html
+++ b/src/app/about-us/categories/categories.component.html
@@ -6,8 +6,8 @@
             Top Categories
         </h1>
     </div>
-    <div class="m-16 -mb-4 bg-gray-100 w-80 rounded-md relative mx-auto">
-        <h1 class="font-sans font-bold text-xl text-red-600 uppercase text-center">
+    <div class="m-16 -mb-3 bg-gray-100 w-80 rounded-md relative mx-auto">
+        <h1 class="font-sans font-bold text-md text-red-600 uppercase text-center">
             Our services
         </h1>
     </div>
