--- a/src/app/categories/categories-search-result/categories-search-result.component.html
+++ b/src/app/categories/categories-search-result/categories-search-result.component.html
@@ -1,25 +1,15 @@
-<div *ngIf="totalCategories > 0" class="flex flex-col items-center justify-center">
-    <div class="m-4 text-center text-gray-700 font-bold text-md">
-        {{ totalCategories }} Results Found
-    </div>
-</div>
-<div *ngIf="categoriesResult.length === 0" class="flex flex-col items-center justify-center">
-    <div class="m-4 text-center text-gray-700 font-bold text-md">
-        No Results Found. Please Try Again
-    </div>
-</div>
 
-<section class="mt-10">
-    <div class="flex justify-center ">
+<section class="mt-20">
+    <div class="flex justify-center mb-20">
         <h1 class="p-4 font-sans text-gray-200 text-xl font-bold uppercase
         bg-red-700 hover:bg-red-800 hero-button font-sans text-left mx-8
         rounded-md transition-all duration-300 transform hover:scale-105 focus:scale-105">
             Top Categories
         </h1>
     </div>
-    <div class="m-16 -mb-4 bg-gray-100 w-80 rounded-md relative mx-auto">
-        <h1 class="font-sans font-bold text-xl text-red-600 uppercase text-center">
-            Our services
+    <div class="mt-10 m-16 -mb-3 bg-gray-100 w-80 rounded-md relative mx-auto">
+        <h1 class="font-sans font-bold text-md text-red-600 capitalize text-center">
+            Discover more with us
         </h1>
     </div>
     <div class="bg-gray-950 rounded-md">
