--- a/src/app/categories/categories-search/categories-search.component.html
+++ b/src/app/categories/categories-search/categories-search.component.html
@@ -17,3 +17,13 @@
         </select>
     </div>
 </div>
+<div *ngIf="categories.length > 0" class="flex flex-col items-center justify-center">
+    <div class="m-4 text-center text-gray-700 font-bold text-md">
+        {{ categories.length }} Results Found
+    </div>
+</div>
+<div *ngIf="categories.length === 0" class="flex flex-col items-center justify-center">
+    <div class="m-4 text-center text-gray-700 font-bold text-md">
+        No Results Found. Please Try Again
+    </div>
+</div>
