--- a/src/app/categories/categories/categories.component.html
+++ b/src/app/categories/categories/categories.component.html
@@ -1,6 +1,6 @@
 <app-navigation-bar></app-navigation-bar>
 <app-categories-hero></app-categories-hero>
-<app-categories-search (results)="handleSearchResults($event)"></app-categories-search>
+<app-categories-search (results)="handleSearchResults($event)" [categories]="categories"></app-categories-search>
 <app-categories-search-result [categoriesResult]="categories"
 [totalCategories]="countResult"></app-categories-search-result>
 <app-footer></app-footer>
