--- a/src/app/dashboard/admin/categories/category/category.component.html
+++ b/src/app/dashboard/admin/categories/category/category.component.html
@@ -1,6 +1,7 @@
 <div class="relative min-h-screen flex">
     <app-sidebar-navigation (categoriesResults)="handleSearchResults($event)"
-        [searchComponent]="searchComponent"></app-sidebar-navigation>
+        [searchComponent]="searchComponent"
+        [isSearch]="isSearch"></app-sidebar-navigation>
     <div class="flex p-10 full-width">
         <div class="width bg-gray-200 p-4 rounded-lg mt-20">
             <app-categories-header [categoriesData]="categoriesData" [totalCategories]="totalCategories"
