--- a/src/app/navbar/profile/profile.component.html
+++ b/src/app/navbar/profile/profile.component.html
@@ -1,25 +1,32 @@
 <div class="flex items-center p-2 relative text-gray-700">
     <div class="flex items-center gap-2">
-        <div class="hidden md:block flex flex-col text-md">
+        <div class="hidden md:block flex flex-col text-md" *ngIf="search === true">
             <h3 class="capitalize text-gray-700 text-md">
                 {{ userData?.firstname }} {{ userData?.lastname }}
             </h3>
             <h4 class="flex justify-center text-gray-400 capitalize text-sm"> {{ userData?.role }}</h4>
         </div>
-        <img [src]="profilePhoto" width="30px" class="cursor-pointer object-cover rounded-full"
-            (click)="toggleProfile()" onerror="this.src='../../../assets/icons/user.png';">
+        <div class="flex flex-col text-md" *ngIf="search === false">
+            <h3 class="capitalize text-gray-700 text-md">
+                {{ userData?.firstname }} {{ userData?.lastname }}
+            </h3>
+            <h4 class="flex justify-center text-gray-400 capitalize text-sm"> {{ userData?.role }}</h4>
+        </div>
+        <img [src]="'data:image;base64, ' + userData.profilePhoto" width="30px"
+            class="cursor-pointer object-cover rounded-full" (click)="toggleProfile()"
+            onerror="this.src='../../../assets/icons/user.png';">
         <i-feather name="chevron-down" class="text-gray-600 cursor-pointer" (click)="toggleProfile()"
-        *ngIf="!profileOpen"></i-feather>
+            *ngIf="!profileOpen"></i-feather>
         <i-feather name="chevron-up" class="text-gray-600 cursor-pointer" (click)="toggleProfile()"
-        *ngIf="profileOpen"></i-feather>
+            *ngIf="profileOpen"></i-feather>
     </div>
 
     <div [ngClass]="{'hidden': !profileOpen}"
         class="absolute top-[120%] right-6 bg-white rounded-md w-64 text-sm border border-gray-300 shadow-lg">
         <div class="flex justify-center p-2">
             <div class="shrink-0">
-                <img [src]="profilePhoto" width="50px" class="object-cover rounded-full"
-                    onerror="this.src='../../../assets/icons/user.png';">
+                <img [src]="'data:image;base64, ' + userData.profilePhoto" width="50px"
+                    class="object-cover rounded-full" onerror="this.src='../../../assets/icons/user.png';">
             </div>
             <div class="bottom-0 right-0" (click)="openUpdateProfilePhoto()">
                 <i-feather name="Edit" class="font-bold text-red-600 mr-4  cursor-pointer" style="width: 15px;">
@@ -49,8 +56,7 @@
             class="p-1 mx-2 text-md cursor-pointer duration-300 hover:drop-shadow-4xl hover:text-red-600 hover:scale-105">
             <a routerLink="/dashboard/profile/settings"> Account settings</a>
         </p>
-        <p
-            class="p-1 mx-2 text-md cursor-pointer duration-300 hover:drop-shadow-4xl hover:text-red-600 hover:scale-105 flex items-center justify-center"
+        <p class="p-1 mx-2 text-md cursor-pointer duration-300 hover:drop-shadow-4xl hover:text-red-600 hover:scale-105 flex items-center justify-center"
             (click)="logout()">
             <feather-icon name="log-out" class="text-sm mr-2 transform rotate-180"></feather-icon>
             Log out
