fixed common bugs in admin use cases

--- a/src/app/dashboard/admin/newsletters/add-newsletter/add-newsletter.component.html
+++ b/src/app/dashboard/admin/newsletters/add-newsletter/add-newsletter.component.html
@@ -2,7 +2,7 @@
     <div class="text-red-600 absolute top-0 right-0 p-2">
         <i-feather name="x-circle" (click)="closeDialog()" class="cursor-pointer"></i-feather>
     </div>
-    <div class="grid grid-cols md:grid-cols-2 rounded-lg p-2 gap-2">
+    <div class="grid grid-cols rounded-lg p-2 gap-2">
         <div class="gap-6 rounded-lg gap-2 p-2">
             <form [formGroup]="newsletterForm">
                 <header class="text-center m-2 text-gray-950 font-bold">
