--- a/src/app/navbar/sidebar-navigation/sidebar-navigation.component.html
+++ b/src/app/navbar/sidebar-navigation/sidebar-navigation.component.html
@@ -8,7 +8,7 @@
                 <div class="hover:drop-shadow-2xl transition-all duration-1000 ease-in-out transform hover:scale-105 
                     border-2 border-gray-200 rounded-md p-1 mr-2">
                     <i-feather name="align-justify" class="min-w-[30px] gray-950 font-bold drop-shadow-xl"
-                        (click)="toggleSidebar()"></i-feather>
+                        (click)="toggleSidebar()" (click)="stopPropagation($event)"></i-feather>
                 </div>
             </div>
         </div>
@@ -32,14 +32,14 @@
     <!-- Sidebar -->
     <div class="bg-gray-950 text-gray-200 w-64 fixed inset-y-0 left-0 transform duration-300
         -translate-x-0 ease-in-out md:relative transition duration-300 ease-in-out side-z"
-        [ngClass]="{'hidden': openMenu, 'md:relative': !openMenu}">
+        [ngClass]="{'hidden': openMenu, 'md:relative': !openMenu}" id="sidebarView">
         <!-- Sidebar Branding and Close Button -->
         <div class="flex items-center p-2 mt-1 cursor-pointer">
             <img src="../../../assets/side-bar-berliz.png" style="width: 170px;">
             <div class="hover:drop-shadow-2xl transition-all duration-1000 ease-in-out transform hover:scale-105 
                 border-2 border-gray-200 rounded-md p-1 mr-4">
                 <i-feather name="x" class="min-w-[30px] text-gray-200  font-bold drop-shadow-xl"
-                    (click)="toggleSidebar()"></i-feather>
+                    (click)="toggleSidebar()" (click)="stopPropagation($event)"></i-feather>
             </div>
         </div>
         <!-- Sidebar Navigation -->
