finished update MuscleGroup component

--- a/src/app/admin/muscle-groups/add-muscle-group-modal/add-muscle-group-modal.component.html
+++ b/src/app/admin/muscle-groups/add-muscle-group-modal/add-muscle-group-modal.component.html
@@ -1,1 +1,125 @@
-<p>add-muscle-group-modal works!</p>
+<div class="relative bg-white text-gray-700 p-2">
+    <div class="text-red-600 absolute top-0 right-0 p-5">
+        <i-feather name="x-circle" (click)="closeDialog()" class="cursor-pointer"></i-feather>
+    </div>
+    <section class="bg-white">
+        <form [formGroup]="addMuscleGroupForm">
+            <header class="font-bold font-sans text-center m-2 text-gray-700">
+                <h1 class="text-xl">Add a new MuscleGroup</h1>
+                <p class="text-red-600 italic text-sm">Please provide details of the muscleGroupand select it's exercises.
+                </p>
+            </header>
+            <div class="invalid-form">
+                <span *ngIf="!(addMuscleGroupForm.get('name')?.invalid ||
+                        addMuscleGroupForm.get('description')?.invalid ||
+                        addMuscleGroupForm.get('image')?.invalid ||
+                        addMuscleGroupForm.get('exerciseIds')?.invalid)
+                         && invalidForm" class="mx-2 text-gray-700">
+                    Everything looks good
+                </span>
+                <span *ngIf="(addMuscleGroupForm.get('name')?.invalid ||
+                addMuscleGroupForm.get('description')?.invalid ||
+                addMuscleGroupForm.get('image')?.invalid ||
+                addMuscleGroupForm.get('exerciseIds')?.invalid)
+                 && invalidForm" class="mx-2 text-red-500">
+                    Please complete all sessions
+                </span>
+            </div>
+            <div class="grid grid-cols md:grid-cols-2 p-1 gap-2">
+                <div class="mx-auto w-full grid grid-cols-2 grid-cols-4 rounded-lg text-gray-700">
+                    <div class="rounded-lg object-cover flex col-span-4 flex">
+                        <img src='../../../../../assets/landing/muscle-group-1.jpg' class="rounded-lg">
+                    </div>
+                    <div *ngIf="addMuscleGroupForm.get('exerciseIds')?.invalid && invalidForm"
+                        class="text-red-500 mx-2 col-span-4">
+                        Select at least one Exercise
+                    </div>
+                    <div *ngFor="let exercise of exercises; let i = index"
+                        class="col-span-2 md:col-span-1 mx-auto w-full flex items-center">
+                        <input formArrayName="exerciseIds" (change)="onCheckboxChanged($event)"
+                            class="w-full border-b-2 rounded-lg  rounded-md m-2 text-gray-950 focus:outline-none border-gray-400 hover:border-gray-500"
+                            placeholder="tags" type="checkbox" [value]="exercise.id">
+                        {{ exercise.name }}
+                    </div>
+                </div>
+                <div class="bg-gray-200 gap-5 rounded-lg p-2 ">
+                    <div class="mx-auto w-full p-2">
+                        <span class="sr-only">Image</span>
+                        <span class="ml-4 font-bold text-gray-700 italic">Image</span>
+                        <div class="flex">
+                            <div class="shrink-0">
+                                <img class="h-16 w-16 object-cover rounded-full" src="../../../assets/icons/user.png"
+                                    alt="Display photo" />
+                            </div>
+                            <input formControlName="image"
+                                class="border-b-2 px-4 py-2 rounded-md m-2 border-gray-400 focus:border-gray-400 focus:outline-none
+                        block w-full text-sm text-gray-950 font-bold cursor-pointer file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0
+                        file:text-sm file:font-semibold file:bg-gray-100 file:text-red-600 hover:file:bg-gray-200 file:cursor-pointer"
+                                [ngClass]="{'border-gray-950': addMuscleGroupForm.get('image')?.invalid && addMuscleGroupForm.get('image')?.dirty }"
+                                (change)="onImgSelected($event)" type="file" accept="image/*">
+                        </div>
+                        <div *ngIf="addMuscleGroupForm.get('image')?.invalid && addMuscleGroupForm.get('image')?.dirty"
+                            class="text-red-500 mx-2">
+                            image is required
+                        </div>
+                    </div>
+                    <div class="mx-auto w-full p-2">
+                        <span class="text-gray-700 font-bold italic">MuscleGroup Name</span>
+                        <input formControlName="name"
+                            class="w-full p-2 mr-2 bg-gray-100 focus:outline-none border-b-2 rounded-lg border-gray-400 hover:border-gray-500"
+                            [ngClass]="{'border-red-400': addMuscleGroupForm.get('name')?.invalid && addMuscleGroupForm.get('name')?.touched 
+                            || (addMuscleGroupForm.get('name')?.invalid && invalidForm)}" placeholder="MuscleGroup Name"
+                            type="text">
+                        <div *ngIf="addMuscleGroupForm.get('name')?.invalid && addMuscleGroupForm.get('name')?.dirty 
+                        || (addMuscleGroupForm.get('name')?.invalid && invalidForm)" class="text-red-500 mx-2">
+                            MuscleGroup Name is required
+                        </div>
+                    </div>
+                    <div class="mx-auto w-full p-2">
+                        <span class="text-gray-700 font-bold italic">bodyPart</span>
+                        <select formControlName="bodyPart" class="w-full"
+                            class="w-full p-2 mr-2 bg-gray-100 focus:outline-none border-b-2 rounded-lg border-gray-400 hover:border-gray-500"
+                            [ngClass]="{'border-red-400': addMuscleGroupForm.get('bodyPart')?.invalid && addMuscleGroupForm.get('bodyPart')?.touched 
+                            || (addMuscleGroupForm.get('bodyPart')?.invalid && invalidForm)}" placeholder="bodyPart"
+                            type="text">
+                            <option selected hidden class="w-auto font-sans">Select bodyPart name</option>
+                            <option *ngFor="let bodyPart of bodyParts" class="w-auto p-8 text-sm m-8">{{ bodyPart.name }}</option>
+                        </select>
+                        <div *ngIf="addMuscleGroupForm.get('bodyPart')?.invalid && addMuscleGroupForm.get('bodyPart')?.dirty|| 
+                        (addMuscleGroupForm.get('bodyPart')?.invalid && invalidForm)" class="text-red-500 mx-2">
+                            select an bodyPart name
+                        </div>
+                    </div>
+                    <div class="mx-auto w-full p-2">
+                        <span class="text-gray-700 font-bold italic">Description</span>
+                        <textarea formControlName="description"
+                            class="w-full p-2 mr-2 bg-gray-100 focus:outline-none border-b-2 rounded-lg border-gray-400 hover:border-gray-500"
+                            [ngClass]="{'border-red-400': addMuscleGroupForm.get('description')?.invalid && addMuscleGroupForm.get('description')?.touched 
+                            || (addMuscleGroupForm.get('description')?.invalid && invalidForm)}"
+                            placeholder="Description" rows="5" cols="30"></textarea>
+                        <div *ngIf="addMuscleGroupForm.get('description')?.invalid && addMuscleGroupForm.get('description')?.dirty
+                        || (addMuscleGroupForm.get('description')?.invalid && invalidForm)" class="text-red-500 mx-2">
+                            Description is required
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2">
+                        <div class="bg-gray-950 rounded-md mx-auto m-2">
+                            <button type="button"
+                                class="p-2 font-bold font-sans py-1 px-2 text-white text-sm lg:text-md flex items-center justify-center"
+                                (click)="clear()">
+                                Clear
+                            </button>
+                        </div>
+                        <div class="bg-red-600 rounded-md mx-auto m-2">
+                            <button type="submit"
+                                class="p-2 font-bold font-sans py-1 px-2 text-white text-sm lg:text-md flex items-center justify-center"
+                                (click)="addCategory()">
+                                Add
+
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </section>
