--- a/src/app/navbar/search/search.component.html
+++ b/src/app/navbar/search/search.component.html
@@ -18,3 +18,5 @@
 (results)="handleMyTodoSearchResults($event)"></app-search-my-todo>
 <app-search-todo-list *ngIf="searchComponent === 'todoList'" 
 (results)="handleTodoListSearchResults($event)"></app-search-todo-list>
+<app-search-muscle-group *ngIf="searchComponent === 'muscleGroup'" 
+(results)="handleMuscleGroupSearchResults($event)"></app-search-muscle-group>
