--- a/src/app/navbar/sidebar-navigation/sidebar-navigation.component.html
+++ b/src/app/navbar/sidebar-navigation/sidebar-navigation.component.html
@@ -14,7 +14,7 @@
         </div>
         <!-- Search and Profile Icons -->
         <app-search (categoriesResults)="handleCategorySearchResults($event)"
-            (contactUsResults)="handleContactUsSearchResults($event)"
+            (contactUsResults)="handleContactUsSearchResults($event)" (muscleGroupResults)="handleMuscleGroupSearchResults($event)"
             (trainersResults)="handleTrainerSearchResults($event)" (usersResults)="handleUserSearchResults($event)"
             (partnersResults)="handlePartnerSearchResults($event)" (centerssResults)="handleCenterSearchResults($event)"
             (newslettersResult)="handleNewsletterSearchResults($event)" (tagsResults)="handleTagSearchResults($event)"
