--- a/src/app/admin/muscle-groups/muscle-groups-list/muscle-groups-list.component.html
+++ b/src/app/admin/muscle-groups/muscle-groups-list/muscle-groups-list.component.html
@@ -1,1 +1,59 @@
-<p>muscle-groups-list works!</p>
+<div class="justify-center items-center p-5 overflow-x-scroll">
+    <div class="min-w-[300px]">
+        <table class="table-auto border-collapse border border-gray-400 bg-gray-300 text-gray-950 font-sans
+                        container">
+            <thead>
+                <tr class="cursor-pointer">
+                    <th class="border border-gray-400 px-4 py-2 hover:bg-gray-400">SN</th>
+                    <th class="border border-gray-400 px-4 py-2 hover:bg-gray-400">Name</th>
+                    <th class="border border-gray-400 px-4 py-2 hover:bg-gray-400">Body Part</th>
+                    <th class="border border-gray-400 px-4 py-2 hover:bg-gray-400">Status</th>
+                    <th class="border border-gray-400 px-4 py-2 hover:bg-gray-400">Date</th>
+                    <th class="border border-gray-400 px-4 py-2 hover:bg-gray-400">muscleGroup ID</th>
+                    <th class="border border-gray-400 px-4 py-2 hover:bg-gray-400">Last update</th>
+                    <th class="border border-gray-400 px-4 py-2 hover:bg-gray-400">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let muscleGroup of muscleGroupsData; let i = index" class="bg-gray-100 hover:bg-gray-200">
+                    <td class="border-b border-gray-400 px-4 py-2">{{ i + 1 }}</td>
+                    <td class="border-b border-gray-400 px-4 py-2">{{ muscleGroup.name }}</td>
+                    <td class="border-b border-gray-400 px-4 py-2">{{ muscleGroup.bodyPart }}</td>
+                    <td class="border-b border-gray-400 px-4 py-2">{{ muscleGroup.status }}</td>
+                    <td class="border-b border-gray-400 px-4 py-2">{{ formatDate(muscleGroup.date) }}</td>
+                    <td class="border-b border-gray-400 px-4 py-2 font-bold">{{ muscleGroup.id }}</td>
+                    <td class="border-b border-gray-400 px-4 py-2">{{ formatDate(muscleGroup.lastUpdate) }}</td>
+                    <td class="border-b border-gray-400 px-4 py-2">
+                        <div class="flex items-center p-2">
+                            <button
+                                class="text-sm rounded-md font-sans mx-auto ml-4
+                                    transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl font-bold"
+                                (click)="openCategoryDetails(muscleGroup.id)">
+                                <i-feather name="eye" class="text-gray-800"></i-feather>
+                            </button>
+                            <button
+                                class="text-sm rounded-md font-sans mx-auto ml-4
+                                        transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl font-bold"
+                                (click)="openUpdateCategory(muscleGroup.id)">
+                                <i-feather name="edit" class="text-red-600"></i-feather>
+                            </button>
+                            <button
+                                class="text-sm bg-gray-950 text-white p-1 px-2 hover:bg-gray-1000 rounded-md font-sans mx-auto ml-4
+                                transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl font-bold"
+                                [ngClass]="{'bg-red-600 hover:bg-red-700': muscleGroup.status == 'true'}"
+                                (click)="updateCategoryStatus(muscleGroup.id)">
+                                {{ muscleGroup.status == 'false' ? 'activate' : 'deactivate'}}
+                            </button>
+                            <button
+                                class="text-sm rounded-md font-sans mx-auto ml-4
+                                        transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl font-bold"
+                                (click)="deleteCategory(muscleGroup.id)">
+                                <i-feather name="trash-2" class="text-red-600"></i-feather>
+                            </button>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
