--- a/src/app/admin/muscle-groups/update-muscle-group-modal/update-muscle-group-modal.component.html
+++ b/src/app/admin/muscle-groups/update-muscle-group-modal/update-muscle-group-modal.component.html
@@ -1,1 +1,109 @@
-<p>update-muscle-group-modal works!</p>
+<div class="relative bg-white text-gray-700 p-2">
+    <div class="text-red-600 absolute top-0 right-0 p-5">
+        <i-feather name="x-circle" (click)="closeDialog()" class="cursor-pointer"></i-feather>
+    </div>
+    <section class="bg-white">
+        <form [formGroup]="updateMuscleGroupForm">
+            <header class="font-bold font-sans text-center m-2 text-gray-700">
+                <h1 class="text-xl">Add a new MuscleGroup</h1>
+                <p class="text-red-600 italic text-sm">Please provide details of the muscleGroupand select it's
+                    exercises.
+                </p>
+            </header>
+            <div class="invalid-form">
+                <span *ngIf="!(updateMuscleGroupForm.get('name')?.invalid ||
+                        updateMuscleGroupForm.get('description')?.invalid ||
+                        updateMuscleGroupForm.get('bodyPart')?.invalid ||
+                        updateMuscleGroupForm.get('exerciseIds')?.invalid)
+                         && invalidForm" class="mx-2 text-gray-700">
+                    Everything looks good
+                </span>
+                <span *ngIf="(updateMuscleGroupForm.get('name')?.invalid ||
+                updateMuscleGroupForm.get('description')?.invalid ||
+                updateMuscleGroupForm.get('bodyPart')?.invalid ||
+                updateMuscleGroupForm.get('exerciseIds')?.invalid)
+                 && invalidForm" class="mx-2 text-red-500">
+                    Please complete all sessions
+                </span>
+            </div>
+            <div class="grid grid-cols md:grid-cols-2 p-1 gap-2">
+                <div class="mx-auto w-full grid grid-cols-2 grid-cols-4 rounded-lg text-gray-700">
+                    <div class="rounded-lg object-cover flex col-span-4 flex">
+                        <img [src]="'data:image;base64,' + muscleGroupData.image" class="rounded-lg">
+                    </div>
+                    <div *ngIf="updateMuscleGroupForm.get('exerciseIds')?.invalid && invalidForm"
+                        class="text-red-500 mx-2 col-span-4">
+                        Select at least one Exercise
+                    </div>
+                    <div *ngFor="let exercise of exercises; let i = index"
+                        class="col-span-2 md:col-span-1 mx-auto w-full flex items-center">
+                        <input formArrayName="exerciseIds" (change)="onCheckboxChanged($event)"
+                            [checked]="selectedExerciseId.includes(exercise.id)"
+                            class="w-full border-b-2 rounded-lg  rounded-md m-2 text-gray-950 focus:outline-none border-gray-400 hover:border-gray-500"
+                            placeholder="tags" type="checkbox" [value]="exercise.id">
+                        {{ exercise.name }}
+                    </div>
+                </div>
+                <div class="bg-gray-200 gap-5 rounded-lg p-2 ">
+                    <input formControlName="id" [value]="muscleGroupData.id" type="number" hidden>
+                    <div class="mx-auto w-full p-2">
+                        <span class="text-gray-700 font-bold italic">MuscleGroup Name</span>
+                        <input formControlName="name" [value]="muscleGroupData.name"
+                            class="w-full p-2 mr-2 bg-gray-100 focus:outline-none border-b-2 rounded-lg border-gray-400 hover:border-gray-500"
+                            [ngClass]="{'border-red-400': updateMuscleGroupForm.get('name')?.invalid && updateMuscleGroupForm.get('name')?.touched 
+                            || (updateMuscleGroupForm.get('name')?.invalid && invalidForm)}"
+                            placeholder="MuscleGroup Name" type="text">
+                        <div *ngIf="updateMuscleGroupForm.get('name')?.invalid && updateMuscleGroupForm.get('name')?.dirty 
+                        || (updateMuscleGroupForm.get('name')?.invalid && invalidForm)" class="text-red-500 mx-2">
+                            MuscleGroup Name is required
+                        </div>
+                    </div>
+                    <div class="mx-auto w-full p-2">
+                        <span class="text-gray-700 font-bold italic">bodyPart</span>
+                        <select formControlName="bodyPart" [value]="muscleGroupData.bodyPart"
+                            class="w-full p-2 mr-2 bg-gray-100 focus:outline-none border-b-2 rounded-lg border-gray-400 hover:border-gray-500"
+                            [ngClass]="{'border-red-400': updateMuscleGroupForm.get('bodyPart')?.invalid && updateMuscleGroupForm.get('bodyPart')?.touched 
+                            || (updateMuscleGroupForm.get('bodyPart')?.invalid && invalidForm)}" placeholder="bodyPart"
+                            type="text">
+                            <option selected hidden class="font-sans">{{ muscleGroupData.bodyPart }}</option>
+                            <option *ngFor="let bodyPart of bodyParts" class="w-auto p-8 text-sm m-8">{{ bodyPart.name
+                                }}</option>
+                        </select>
+                        <div *ngIf="updateMuscleGroupForm.get('bodyPart')?.invalid && updateMuscleGroupForm.get('bodyPart')?.dirty|| 
+                        (updateMuscleGroupForm.get('bodyPart')?.invalid && invalidForm)" class="text-red-500 mx-2">
+                            select an bodyPart name
+                        </div>
+                    </div>
+                    <div class="mx-auto w-full p-2">
+                        <span class="text-gray-700 font-bold italic">Description</span>
+                        <textarea formControlName="description" [value]="muscleGroupData.description"
+                            class="w-full p-2 mr-2 bg-gray-100 focus:outline-none border-b-2 rounded-lg border-gray-400 hover:border-gray-500"
+                            [ngClass]="{'border-red-400': updateMuscleGroupForm.get('description')?.invalid && updateMuscleGroupForm.get('description')?.touched 
+                            || (updateMuscleGroupForm.get('description')?.invalid && invalidForm)}"
+                            placeholder="Description" rows="5" cols="30"></textarea>
+                        <div *ngIf="updateMuscleGroupForm.get('description')?.invalid && updateMuscleGroupForm.get('description')?.dirty
+                        || (updateMuscleGroupForm.get('description')?.invalid && invalidForm)"
+                            class="text-red-500 mx-2">
+                            Description is required
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-2">
+                        <div class="bg-gray-950 rounded-md mx-auto m-2">
+                            <button type="button"
+                                class="p-2 font-bold font-sans py-1 px-2 text-white text-sm lg:text-md flex items-center justify-center"
+                                (click)="clear()">
+                                Clear
+                            </button>
+                        </div>
+                        <div class="bg-red-600 rounded-md mx-auto m-2">
+                            <button type="submit"
+                                class="p-2 font-bold font-sans py-1 px-2 text-white text-sm lg:text-md flex items-center justify-center"
+                                (click)="addCategory()">
+                                Update
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </section>
